--- a/Waiting/WebContent/assets/css/Mypage.css
+++ b/Waiting/WebContent/assets/css/Mypage.css
@@ -9,7 +9,7 @@ body {
 }
 
 .card {
-	margin-top: 100px;
+	margin-top: 30px;
     width: 1000px;
     height: 800px;
     background-color: #c0c0c0;
@@ -64,9 +64,9 @@ body {
 }
 
 .btn1 {
+	 border-radius: 20px !important;
     height: 40px;
     width: 150px;
-    border: none;
     background-color: #000;
     color: #aeaeae;
     font-size: 15px
