--- a/Waiting/WebContent/assets/css/topbar.css
+++ b/Waiting/WebContent/assets/css/topbar.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 body {
-    background: #eee
+    background: #ffffff
 }
 
 .header2 {
@@ -26,7 +26,8 @@ body {
 .header2 .h2-nav .navbar-nav .nav-item .nav-link {
     padding: 12px 0px;
     color: #ffffff;
-    font-weight: 400
+    font-weight: 400;
+    font-size: 20px;
 }
 
 .header2 .h2-nav .navbar-nav .nav-item .nav-link:hover {
